test_suite/tests/ui/duplicate-attribute/rename-rename-de.stderr
error: duplicate serde attribute `rename`
 --> $DIR/rename-rename-de.rs:7:13
  |
7 |     #[serde(rename(deserialize = "y"))]
  |             ^^^^^^

error: aborting due to previous error

